worked on a responsiveness issue on mobile view

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2097,15 +2097,19 @@ nav {
 
         .center-small-rectangle {
             padding-bottom: 5%;
+            height: 120px;
 
             .freebies {
                 flex-direction: column;
-                padding-left: 5% !important;
+                padding-left: 0 !important;
                 text-align: center;
 
                 p {
+                    width: 80%;
                     font-size: 15px;
                     color: #fff;
+                    margin-left: auto;
+                    margin-right: auto;
                 }
 
                 .freebies-btn {
